--- a/renderer/generate_video.html
+++ b/renderer/generate_video.html
@@ -6,53 +6,8 @@
     <title>My Electron App</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/scenes.css">
+    <link rel="stylesheet" href="styles/generate_audio.css">
     <style>
-        /* General Styles */
-        body {
-            font-family: sans-serif;
-            margin: 0;
-        }
-
-        .navbar {
-            padding: 20px;
-            text-align: center;
-        }
-
-        .tagline {
-            font-style: italic;
-            font-size: 0.8em;
-        }
-
-        .content {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            padding: 20px;
-        }
-
-        .page_control_ {
-            padding: 10px 15px;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            border: none;
-        }
-
-        #back_ {
-            color: black;
-            background-color: rgba(8, 8, 8, 0);
-            width: 15%;
-            height: 100%;
-        }
-
-        /* Content Styles */
-        #message p {
-            font-size: 4vw;
-            color: white;
-            font-weight: bold;
-        }
-
         #progress_container {
             background-color: rgba(128, 128, 128, 0.308);
             width: 55%;
@@ -62,19 +17,16 @@
             box-shadow: 2px 2px 10px gray;
             padding: 5px;
         }
-
         #video_progress {
             width: 0%;
             height: 100%;
             background-color: #0b8617;
             border-radius: 10px;
         }
-
         #generation_output {
             font-size: 1.5vh;
             color: white;
         }
-
         .content>div:last-of-type {
             width: 40%;
             height: 8%;
@@ -83,43 +35,10 @@
             align-items: center;
             column-gap: 10px;
         }
-
-        /* Button Styles */
-        #back_ {
-            background-color: rgba(128, 128, 128, 0.308);
-            width: 15vw;
-            height: 7vh;
-            max-width: 200px;
-            font-size: clamp(12px, 2vw, 28px);
-        }
-
-        #next_ {
-            display: flex;
-            align-items: center;
-            column-gap: 5px;
-            width: auto;
-            max-width: 200px;
-            font-size: clamp(12px, 2vw, 28px);
-            height: 7vh;
-            justify-content: center;
-        }
-
-        /* Loader Styles */
-        .loader {
-            display: none;
-            border: 4px solid rgba(0, 0, 0, 0.1);
-            border-top: 4px solid rgb(255, 255, 255);
-            border-radius: 50%;
-            width: 3vh;
-            height: 3vh;
-            animation: spin 2s linear infinite;
-        }
-
         @keyframes spin {
             0% {
                 transform: rotate(0deg);
             }
-
             100% {
                 transform: rotate(360deg);
             }
@@ -168,64 +87,6 @@
         import { regenerateVideo } from './scripts/api.js';
         import { io } from "https://cdn.socket.io/4.5.0/socket.io.esm.min.js";
 
-        const content = {
-            "prompt": "aksjdasd",
-            "video_dur": "5",
-            "video_res": "1280x720",
-            "story_id": "50800",
-            "draft_story": {
-                "scenes": [
-                    {
-                        "scene": "Morning mist curled around the roots of ancient trees as a young girl named Elara wandered deeper into the heart of the forest, drawn by a melody only she could hear.",
-                        "imagePrompt": "a young girl walking through a misty magical forest with ancient trees and soft morning light",
-                        "scene_id": 5469
-                    },
-                    {
-                        "scene": "A fox with silver fur and wise eyes appeared before her, motioning with its head as if to say, “Follow me.”",
-                        "imagePrompt": "a silver-furred fox with glowing eyes standing on a forest path, early sunlight streaming through the trees",
-                        "scene_id": 66333
-                    },
-                    {
-                        "scene": "They reached a clearing where flowers glowed in soft blues and purples, swaying gently despite the still air.",
-                        "imagePrompt": "a mystical forest clearing filled with glowing blue and purple flowers under a soft twilight sky",
-                        "scene_id": 40604
-                    },
-                    {
-                        "scene": "At the center stood a hollow tree with a spiral staircase leading deep underground, its bark carved with glowing runes.",
-                        "imagePrompt": "an ancient hollow tree with glowing runes and a spiral staircase descending inside",
-                        "scene_id": 5356
-                    },
-                    {
-                        "scene": "Elara hesitated, then stepped into the tree, her heart pounding as the air shimmered around her.",
-                        "imagePrompt": "a girl entering a glowing tree with a magical aura, the inside illuminated by mysterious light",
-                        "scene_id": 60029
-                    },
-                    {
-                        "scene": "They reached a clearing where flowers glowed in soft blues and purples, swaying gently despite the still air.",
-                        "imagePrompt": "a mystical forest clearing filled with glowing blue and purple flowers under a soft twilight sky",
-                        "scene_id": 66744
-                    }
-                ],
-                "story_id": 50800
-            },
-            "audios_list": [
-                "/home/magician/Documents/story_teller/output_audio_24901.wav",
-                "/home/magician/Documents/story_teller/output_audio_52727.wav",
-                "/home/magician/Documents/story_teller/output_audio_65457.wav",
-                "/home/magician/Documents/story_teller/output_audio_52212.wav",
-                "/home/magician/Documents/story_teller/output_audio_15624.wav",
-                "/home/magician/Documents/story_teller/output_audio_25693.wav"
-            ],
-            "render_images": [
-                "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
-                "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
-                "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
-                "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
-                "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
-                "/home/magician/Desktop/story_teller/assets/img/renderd_img.png"
-            ]
-        }
-
         const audio_input = document.getElementById("speaker_file_picker");
         const loader2 = document.getElementById("loading_animation");
         const generateText = document.getElementById("generate_text");
@@ -267,8 +128,24 @@
             video_progress = newProgress;
             porgressMessage.innerText = message;
         }
-        draft_story = content;
 
+        const audios = [
+            "/home/magician/Documents/story_teller/output_audio_24901.wav",
+            "/home/magician/Documents/story_teller/output_audio_52727.wav",
+            "/home/magician/Documents/story_teller/output_audio_65457.wav",
+            "/home/magician/Documents/story_teller/output_audio_52212.wav",
+            "/home/magician/Documents/story_teller/output_audio_15624.wav",
+            "/home/magician/Documents/story_teller/output_audio_25693.wav"
+        ]
+        const render_images = [
+            "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
+            "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
+            "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
+            "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
+            "/home/magician/Desktop/story_teller/assets/img/renderd_img.png",
+            "/home/magician/Desktop/story_teller/assets/img/renderd_img.png"
+        ]
+        
         try{
             regenerateVideo(draft_story.story_id, draft_story.render_images, draft_story.audios_list, draft_story.video_res )
         } catch (error) {
