--- a/renderer/image_render.html
+++ b/renderer/image_render.html
@@ -259,7 +259,7 @@
                                 <div id="error_scene_prompt_${sceneId}" style="height:90%;width:90%;display:flex;justify-content:center;align-items:center;color:gray;display:none">
                                     Failed To Generate Content    
                                 </div>
-                                <textarea class="scene_prompt_textarea" name="scene_output_${sceneId}" id="scene_output_${sceneId}" cols="30">${sceneText}</textarea>
+                                <textarea class="scene_prompt_textarea" name="scene_output_${sceneId}" id="scene_output_${sceneId}" cols="30">${imagePrompt}</textarea>
                                 </textarea>
                             </div>
                             <div class="scenes_controls_">
