--- a/renderer/generate_audio.html
+++ b/renderer/generate_audio.html
@@ -229,10 +229,8 @@
         document.getElementById("upload_and_generate").addEventListener('click', (event) => { upload_audio() });
         document.getElementById("cancel_popup_").addEventListener('click', (event) => { close_upload_popup() });
         document.getElementById("speaker_file_picker").addEventListener('click', (event) => { pickSpeakerFile() });
-        
-        
-
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2.0.5/FileSaver.min.js"></script>
 </body>
 
 </html>
