--- a/renderer/prompt_page.html
+++ b/renderer/prompt_page.html
@@ -28,6 +28,7 @@
                 <div class="select_input_" id="video_length_input">
                     <select id="video_length_input_select">
                         <option value="" selected>Duration</option>
+                        <option value="1">1 min</option>
                         <option value="2">2 min</option>
                         <option value="5">5 min</option>
                         <option value="10">10 min</option>
