--- a/renderer/story_scenes.html
+++ b/renderer/story_scenes.html
@@ -179,7 +179,7 @@
                     enable_page_control_btn();
                     hideOverlay(overlay, content);
                     alert("Failed to perform action...");
-                    throw error;
+                    throw err;
                 }
             }
 
