--- a/renderer/generate_audio.html
+++ b/renderer/generate_audio.html
@@ -85,7 +85,7 @@
     <script type="module">
         import { generate_scenes, refresh_scene, update_scene, get_story } from './scripts/scenes.js';
         import { transcribe_scene } from './scripts/audio.js';
-        
+
         const audio_input = document.getElementById("speaker_file_picker");
         const upload_popup = document.getElementById("upload_audio");
         const loader = document.getElementById("loading_animation");
@@ -103,6 +103,12 @@
 
         let story_data = JSON.parse(localStorage.getItem('story_data'));
         console.log(story_data);
+
+        if (story_data.audios_list) {
+            is_speaker_selected = true;
+            is_audios_genereted = true;
+            progressBar.style.width = "99.9%";
+        }
         
         function enable_page_control_btn() {
             loader2.style.display = "none";
@@ -186,7 +192,7 @@
         }
 
         async function pickSpeakerFile() {
-            const result = await window.api.call('dialog:pickFile');
+            const result = await window.api.call('dialog:pickFile', { file_type: ['mp3', 'wav'], file_type : "audio"});
             if (result.canceled || !result.filePaths.length) return;
 
             const filePath = result.filePaths[0];
@@ -228,7 +234,7 @@
                     video_res: story_data.video_res,
                     story_id: story_data.story_id,
                     draft_story: updated_story_data,
-                    // audios_list: generated_audios_path,
+                    audios_list: generated_audios_path
                 }));
             window.location.href = 'image_render.html';
         }
